--- a/EFNgApp/ClientApp/angular.json
+++ b/EFNgApp/ClientApp/angular.json
@@ -76,6 +76,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
+            "sourceMap": true,
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
